# vibeguard

./: .gitignore  README.md  action.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: vibeguard.yml
api/: app.py
api_vercel/: index.py
cli/: main.py
core/: parser.py  scanner.py
core/patterns/: __init__.py  auth.py  config.py  crypto.py  exposure.py  injection.py  jwt.py  massassign.py  packages.py  redos.py  secrets.py  storage.py
models/: gemini_explainer.py
output/: report.py
output/templates/: report.html
tests/fixtures/: .env.example  vulnerable.js  vulnerable.py
vibeguard-vscode/: package-lock.json  package.json  vibeguard-0.1.0.vsix
vibeguard-vscode/src/: extension.js
